--- a/src/styles/scss/minimal.scss
+++ b/src/styles/scss/minimal.scss
@@ -1,6 +1,6 @@
 /* Prettify by @pranavdeshai: Minimal
 
-Version: 0.1.2
+Version: 0.1.3
 Readme: https://github.com/pranavdeshai/anki-prettify
 Links:
 - Reddit: https://www.reddit.com/user/Various_Breadfruit48
@@ -137,6 +137,7 @@ Links:
   display: flex;
   color: var(--text-fg-faint);
   font-size: var(--font-size-small);
+  white-space: nowrap;
 
   .mobile & {
     margin: 1em;
@@ -145,6 +146,8 @@ Links:
 
 .prettify-subdeck {
   text-decoration: underline;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 /* -------------------------------------------------- TAGS */
