--- a/src/styles/scss/nord.scss
+++ b/src/styles/scss/nord.scss
@@ -18,7 +18,7 @@ $nord15: #b48ead;
 
 /* Prettify by @pranavdeshai: Nord
 
-Version: 0.1.2
+Version: 0.1.3
 Readme: https://github.com/pranavdeshai/anki-prettify
 Links:
 - Reddit: https://www.reddit.com/user/Various_Breadfruit48
@@ -156,6 +156,7 @@ Links:
   display: flex;
   color: var(--text-fg-faint);
   font-size: var(--font-size-small);
+  white-space: nowrap;
 
   .mobile & {
     margin: 1em;
@@ -164,6 +165,8 @@ Links:
 
 .prettify-subdeck {
   text-decoration: underline;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 /* -------------------------------------------------- TAGS */
